objects/Order__c.object
<CustomObject>
    <label>Order1</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order&apos;s</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>Order_Line_Item__c.Total__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open,</fullName>
                </value>
                <value>
                    <fullName>In Process,</fullName>
                </value>
                <value>
                    <fullName>Dispatched,</fullName>
                </value>
                <value>
                    <fullName>Shipped,</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery,</fullName>
                </value>
                <value>
                    <fullName>Delivered, Closed,</fullName>
                </value>
                <value>
                    <fullName>Return Requested,</fullName>
                </value>
                <value>
                    <fullName>Returned,</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COD,</fullName>
                </value>
                <value>
                    <fullName>Net Banking</fullName>
                </value>
                <value>
                    <fullName>, CC,</fullName>
                </value>
                <value>
                    <fullName>Debit Card,</fullName>
                </value>
                <value>
                    <fullName>EMI,</fullName>
                </value>
                <value>
                    <fullName>Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Order_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <summarizedField>Order_Line_Item__c.Total__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <label>Total Items</label>
        <summarizedField>Order_Line_Item__c.Quantat__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Order_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COD</fullName>
                </value>
                <value>
                    <fullName>Net Banking</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PAID,</fullName>
                </value>
                <value>
                    <fullName>COD,</fullName>
                </value>
                <value>
                    <fullName>Partially Paid,</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Adress__c</fullName>
        <label>Shipping Adress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Isupdated</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISCHANGED( LastModifiedDate ), NOT(ISNULL( Customer__c ) ),NOT(ISNULL( Customer__c ) ))</errorConditionFormula>
        <errorMessage>Customer is Not Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CreatingUpdating</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISBLANK( Customer__c ) )</errorConditionFormula>
        <errorMessage>Customer Field not equal to null</errorMessage>
    </validationRules>
</CustomObject>